# riptide

./: Cargo.toml  README.md  flake.nix
.github/workflows/: aur-update.yml  ci.yml
src/: app.rs  events.rs  mpris.rs  player.rs  ui.rs
src/api/: client.rs  mod.rs  models.rs
src/app/: library.rs  loading.rs  mod.rs  navigation.rs  playback.rs  responses.rs  state.rs
