[package]
name = "riptide"
version = "0.3.7"
edition = "2024"

[[bin]]
name = "riptide"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
zbus = { version = "4", features = ["tokio"] }
base64 = "0.22"
